# PhaseBasedEVMCpp

./: LICENSE  README.md
phaseEVM/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.txt
phaseEVM/data/: baby_mag.avi
phaseEVM/include/: AmplitudeWeightedBlur.hpp  FIRWindowBP.hpp  buildLevel.hpp  differenceOfButterworths.hpp  differenceOfIIR.hpp  fftshift.hpp  filters.hpp  getAngleMask.hpp  getAngleMaskSmooth.hpp  getFilterIDX.hpp  getFilters.hpp  getFiltersSmoothWindow.hpp  getIDXFromFilter.hpp  getPolarGrid.hpp  getRadialMaskPair.hpp  maxSCFpyrHt.hpp  phase_evm.h  reconLevel.hpp  type2str.hpp
phaseEVM/include/extra files not needed/: filters.hpp  getAngleMask.hpp  getFilters.hpp  getRadialMaskPair.hpp
phaseEVM/src/: main.cpp  phase_evm.cpp
phaseEVM/test/: test_baby.param
